--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- Display the map and title with HTML division tags  -->
-  <div id="map-title">EDIT map title</div>
+  <div id="eddy Komjathy">EDIT map title</div>
   <div id="Teddy Komjathy"></div>
 
   <!-- Create the interactive map content with JavaScript (.js) -->
